opam-version: "2.0"
maintainer:   "romain.calascibetta@gmail.com"
homepage:     "https://git.robur.coop/robur/mkernel"
bug-reports:  "https://git.robur.coop/robur/mkernel/issues"
dev-repo:     "git+https://git.robur.coop/robur/mkernel.git"
doc:          "https://git.robur.coop/robur/mkernel"
license:      "ISC"
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
tags:         [ "org:mirage" ]
build:        [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
]
depends: [
  "ocaml" {>= "5.2.1"}
  "dune"  {>= "3.0"}
  "bstr"
  "miou"
  "solo5"
  "logs"
  "ohex"
  "jsonm"
  "ocaml-solo5"
  "hxd" {with-test}
  "fmt" {with-test}
  "cachet" {with-test}
]

pin-depends: [
  [ "ocaml-solo5.1.1.0" "git+https://github.com/mirage/ocaml-solo5.git#c8a95779da6c0e444d4606d6d001098fc00d4b2d" ]
]
