opam-version: "2.0"
maintainer:   "romain.calascibetta@gmail.com"
homepage:     "https://git.robur.coop/robur/mkernel"
bug-reports:  "https://git.robur.coop/robur/mkernel/issues"
dev-repo:     "git+https://github.com/robur-coop/mkernel.git"
doc:          "https://git.robur.coop/robur/mkernel"
license:      "MIT"
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
build:        [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
synopsis: "An unikernel with Miou in OCaml to provide I/O for Solo5/Unikraft"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune"  {>= "3.0"}
  "bstr"
  "miou"
  "solo5"
  "logs"
  "jsont"
  "bytesrw"
  "ocaml-solo5"
  "hxd" {with-test}
  "fmt" {with-test}
  "cachet" {with-test}
]
