(library
 (name miou_solo5)
 (public_name miou-solo5)
 (modules miou_solo5)
 (libraries jsonm logs miou)
 (flags
  (:standard -no-keep-locs))
 (wrapped false)
 (foreign_stubs
  (language c)
  (names stubs)))

(rule
 (target miou_solo5.ml)
 (deps miou_solo5.solo5.ml miou_solo5.default.ml)
 (action
  (copy miou_solo5.%{context_name}.ml %{target})))

(rule
 (target stubs.c)
 (deps stubs.solo5.c stubs.default.c)
 (action
  (copy stubs.%{context_name}.c %{target})))
