(library
 (name mkernel)
 (public_name mkernel)
 (modules mkernel)
 (libraries hxd.core hxd.string bstr ohex jsonm logs miou)
 (flags
  (:standard -no-keep-locs))
 (wrapped false)
 (foreign_stubs
  (language c)
  (names stubs)))

(rule
 (target mkernel.ml)
 (deps mkernel.unikraft.ml mkernel.solo5.ml mkernel.default.ml)
 (action
  (copy mkernel.%{context_name}.ml %{target})))

(rule
 (target stubs.c)
 (deps stubs.unikraft.c stubs.solo5.c stubs.default.c)
 (action
  (copy stubs.%{context_name}.c %{target})))
