(executable
 (name sleep)
 (modules sleep)
 (modes native)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (enabled_if (= %{context_name} "solo5"))
 (libraries miou-solo5)
 (foreign_stubs (language c) (names manifest.sleep)))

(executable
 (name schedule)
 (modules schedule)
 (modes native)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (enabled_if (= %{context_name} "solo5"))
 (libraries miou-solo5)
 (foreign_stubs (language c) (names manifest.schedule)))

(executable
 (name block)
 (modules block)
 (modes native)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (enabled_if (= %{context_name} "solo5"))
 (libraries miou-solo5 fmt hxd.core hxd.string)
 (foreign_stubs (language c) (names manifest.block)))

(rule
 (targets manifest.sleep.c)
 (deps none.json)
 (action (run solo5-elftool gen-manifest none.json manifest.sleep.c)))

(rule
 (targets manifest.schedule.c)
 (deps none.json)
 (action (run solo5-elftool gen-manifest none.json manifest.schedule.c)))

(rule
 (targets manifest.block.c)
 (deps block.json)
 (action (run solo5-elftool gen-manifest block.json manifest.block.c)))

(cram
 (enabled_if (= %{context_name} "solo5"))
 (deps sleep.exe schedule.exe block.exe simple.txt))
